force-app/main/default/objects/Promotion__c/fields/Available_On__c.field-meta.xml
<CustomField>
    <fullName>Available_On__c</fullName>
    <description>Determines when the Promotion is available to be claimed</description>
    <inlineHelpText>When is this promotion available</inlineHelpText>
    <label>Promotion Available On</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Registration</fullName>
            </value>
            <value>
                <fullName>Reservation</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>