force-app/main/default/objects/Promotion__c/fields/Document_Requirements__c.field-meta.xml
<CustomField>
    <fullName>Document_Requirements__c</fullName>
    <label>Document Requirements</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Bill of Sale</fullName>
            </value>
            <value>
                <fullName>Proof of Payout</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>