force-app/main/default/objects/Promotion__c/fields/End_Date__c.field-meta.xml
<CustomField>
    <fullName>End_Date__c</fullName>
    <description>End of the promo</description>
    <label>End Date</label>
    <type>DateTime</type>
</CustomField>